<resources>
    <string name="app_name">BizLinker</string>
    <string name="shared_pref"> </string>
    <string name="profile_button">Профиль</string>
    <string name="search_button">Поиск</string>
    <string name="chat_button">Чаты</string>
    <string name="products_button">Продукты</string>
    <string name="logo_chat_item_txt_hint">АБ</string>
    <string name="username_chat_item_txt_hint">Альфред Богданов</string>
    <string name="message_chat_item_txt_hint">Добрый день! У вас еще есть предложения или дополнения к заказу?</string>
    <string name="datetime_chat_item_txt_hint">15:55</string>
    <string name="product_logo_product_item_txt_hint">СМ</string>
    <string name="product_name_product_item_txt_hint">Семечки жаренные</string>
    <string name="product_description_product_item_txt_hint">Семечки жаренные вкусные и сытные, чищенные, соответствуют всем нормам ГОСТ</string>
    <string name="product_count_product_item_txt_hint">1000</string>
    <string name="product_count_txt">Кол-во: </string>
    <string name="invoices">Накладные</string>
    <string name="out">Выйти</string>
    <string name="contact">Связаться</string>
    <string name="sign_in">Вход</string>
    <string name="register">Регистрация</string>
    <string name="sign_in_button_continue">Войти</string>
    <string name="register_button_continue">Зарегистрироваться</string>
    <string name="inn">ИНН</string>
    <string name="inn_hint">0000000000</string>
    <string name="password">Пароль</string>
    <string name="password_hint">********</string>
    <string name="remember">Запомнить</string>
    <string name="dont_remember_password">Не помню пароль</string>
    <string name="or_continue_with">Авторизоваться через</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome2">Пройдите авторизацию!</string>
    <string name="empty"> </string>
    <string name="error_input">Это поле обязательно для заполнения!</string>
    <string name="error_signin">Не удалось войти?</string>
    <string name="themes_txt">Темы приложения\n(нажмите по нужной)</string>
    <string name="message_hint">Введите сообщение…</string>
    <string name="date_hint_txt">12.12.2024</string>
    <string name="sum_hint_txt">12345.00</string>
    <string name="invoices_txt">Все накладные</string>
    <string name="invoice_products_txt">Продукты в накладной</string>
    <string name="own_product_hint_txt">Наименование продукта</string>
    <string name="own_product_count_hint_txt">Кол-во продукта</string>
    <string name="is_provider">Поставщик</string>
    <string name="organization_name">Наименование:</string>
    <string name="organization_ogrn">ОГРН:</string>
    <string name="organization_kpp">КПП:</string>
    <string name="organization_inn">ИНН:</string>
    <string name="organization_okpo">ОКПО:</string>
    <string name="organization_address">Адрес:</string>
    <string name="organization_phones">Телефоны:</string>
    <string name="organization_emails">Е-майлы:</string>
    <string name="organization_form">Форма:</string>
    <string name="organization_website">Веб-сайт:</string>
    <string name="organization_password">Пароль:</string>
    <string name="add_product">Добавление продукта</string>
    <string name="edit_product">Изменение продукта</string>
    <string name="product_name">Наименование</string>
    <string name="product_price">Стоимость</string>
    <string name="product_photo">URL картинки</string>
    <string name="product_description">Описание</string>
    <string name="product_count">Количество</string>
    <string name="change_to_provider">Вы переключились на роль поставщика!</string>
    <string name="change_to_buyer">Вы переключились на роль покупателя!</string>
    <string name="search">Поиск</string>
    <string name="save">Сохранить</string>
    <string name="like_price">Желаемая цена</string>
    <string name="smth_went_wrong">Нет подключения к интернету!</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="pin">Закрепить</string>
    <string name="unpin">Открепить</string>
    <string name="pinned">Закрепленные сообщения</string>
</resources>