<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/products_button"
            android:enabled="true"
            android:title="@string/products_button"
            android:icon="@drawable/products_logo"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/chat_button"
            android:enabled="true"
            android:title="@string/chat_button"
            android:icon="@drawable/chat_logo"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/search_button"
            android:enabled="true"
            android:icon="@drawable/search_logo"
            android:title="@string/search_button"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/profile_button"
            android:enabled="true"
            android:icon="@drawable/profile_logo"
            android:title="@string/profile_button"
            app:showAsAction="ifRoom" />
</menu>