<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/empty">

        <TextView
                android:text="@string/welcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeTxt"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/cardviewLogin"
                app:layout_constraintStart_toStartOf="@+id/cardviewLogin"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="4dp" />

        <TextView
                android:text="@string/welcome2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeTxt2"
                android:textSize="20sp"
                android:alpha="0.5"
                app:layout_constraintStart_toStartOf="@+id/welcomeTxt"
                app:layout_constraintEnd_toEndOf="@+id/welcomeTxt"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
                android:layout_marginTop="4dp" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/cardviewLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTxt2"
                android:layout_marginTop="32dp"
                app:strokeWidth="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                        android:text="@string/sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/signIn"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/yellow"
                        app:strokeWidth="2dp"
                        android:textSize="16sp"
                        app:icon="@drawable/sign_in"
                        app:iconGravity="end"
                        tools:ignore="DuplicateSpeakableTextCheck"
                        app:strokeColor="?attr/colorOnPrimary" />

                <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/register"
                        app:layout_constraintTop_toTopOf="@+id/signIn"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        android:text="@string/register"
                        android:backgroundTint="@color/greenRegister"
                        app:strokeWidth="2dp"
                        android:textSize="16sp"
                        app:icon="@drawable/registration"
                        app:iconGravity="end"
                        app:layout_constraintBottom_toBottomOf="@+id/signIn"
                        app:strokeColor="?attr/colorOnPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/inn"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:cursorColor="@color/red"
                        app:layout_constraintStart_toStartOf="@+id/signIn"
                        app:layout_constraintTop_toBottomOf="@+id/signIn"
                        android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/main_font"
                            android:textColor="?attr/colorOnPrimary"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:inputType="number"
                            android:textStyle="normal"
                            android:textSize="20sp"
                            android:textCursorDrawable="@drawable/custom_cursor"
                            android:textColorHighlight="@color/red"
                            android:textSelectHandle="@drawable/custom_cursor"
                            android:textSelectHandleLeft="@drawable/custom_cursor"
                            android:textSelectHandleRight="@drawable/custom_cursor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:cursorColor="@color/red"
                        app:layout_constraintStart_toStartOf="@+id/signIn"
                        app:layout_constraintTop_toBottomOf="@+id/emailTxt">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/main_font"
                            android:textColor="?attr/colorOnPrimary"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                            android:maxLines="1"
                            android:inputType="text|textPassword|textNoSuggestions"
                            android:textStyle="normal"
                            android:textSize="20sp"
                            android:imeOptions="actionDone"
                            android:textCursorDrawable="@drawable/custom_cursor"
                            android:textColorHighlight="@color/red"
                            android:textSelectHandle="@drawable/custom_cursor"
                            android:textSelectHandleLeft="@drawable/custom_cursor"
                            android:textSelectHandleRight="@drawable/custom_cursor" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:id="@+id/showPassword"
                        app:layout_constraintBottom_toBottomOf="@+id/passwordTxt"
                        app:layout_constraintTop_toBottomOf="@+id/emailTxt"
                        app:layout_constraintEnd_toEndOf="@+id/passwordTxt"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/empty"
                        android:foreground="@drawable/show_password"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <CheckBox
                        android:text="@string/remember"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/remember"
                        app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
                        app:layout_constraintStart_toStartOf="@+id/passwordTxt"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="16dp"
                        android:textStyle="normal"
                        tools:ignore="TouchTargetSizeCheck"
                        android:checked="true" />

                <TextView
                        android:text="@string/error_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/errorSignIn"
                        app:layout_constraintEnd_toEndOf="@+id/passwordTxt"
                        app:layout_constraintTop_toTopOf="@+id/remember"
                        app:layout_constraintBottom_toBottomOf="@+id/remember"
                        android:alpha="0.3"
                        android:clickable="true"
                        android:gravity="center"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                        android:layout_marginEnd="4dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
                android:text="@string/register_button_continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:backgroundTint="@color/red"
                app:strokeColor="@color/whiteDark"
                app:strokeWidth="2dp"
                android:textSize="24sp"
                app:icon="@drawable/sign_in"
                app:iconGravity="textEnd"
                android:textColor="@color/whiteDark"
                app:iconTint="@color/whiteDark"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toBottomOf="@+id/cardviewLogin"
                app:layout_constraintEnd_toEndOf="@+id/cardviewLogin"
                app:layout_constraintStart_toStartOf="@+id/cardviewLogin"
                android:layout_marginTop="16dp"
                tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>