<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="0dp"
            android:id="@+id/chatItem"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardElevation="0dp"
            android:layout_marginStart="-8dp"
            android:layout_marginEnd="-8dp"
            app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="50dp"
                    android:id="@+id/cardviewIcon"
                    app:strokeWidth="1dp"
                    app:cardBackgroundColor="@color/whiteDark"
                    app:strokeColor="@color/black">

                <TextView
                        android:text="@string/logo_chat_item_txt_hint"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/logoTxt"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:elegantTextHeight="true"
                        android:autoSizeTextType="uniform"
                        android:padding="10dp"
                        android:textColor="@color/black" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                    android:text="@string/username_chat_item_txt_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameTxt"
                    app:layout_constraintStart_toEndOf="@+id/cardviewIcon"
                    app:layout_constraintTop_toTopOf="@+id/cardviewIcon"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:layout_marginTop="4dp"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toStartOf="@+id/datetimeTxt"
                    android:layout_marginEnd="8dp" />

            <TextView
                    android:text="@string/message_chat_item_txt_hint"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/messageTxt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardviewIcon"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/usernameTxt"
                    app:layout_constraintBottom_toBottomOf="@+id/cardviewIcon"
                    android:layout_marginTop="4dp"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:alpha="0.75" />

            <TextView
                    android:text="@string/datetime_chat_item_txt_hint"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:id="@+id/datetimeTxt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/usernameTxt"
                    android:textStyle="normal"
                    android:textSize="12sp"
                    android:maxLines="2"
                    app:layout_constraintTop_toTopOf="@+id/usernameTxt"
                    android:layout_marginEnd="24dp"
                    android:gravity="center|end"
                    android:alpha="0.5" />

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorOnPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:alpha="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>